[package]
    authors       = ["Eric Evans <CireSnave@gmail.com>"]
    description   = "Look inside structs, enums, and unions!"
    documentation = "https://docs.rs/look_inside"
    edition       = "2021"
    homepage      = "https://docs.rs/look_inside"
    license       = "MIT"
    name          = "look_inside"
    readme        = "README.md"
    repository    = "https://github.com/CireSnave/look_inside"
    version       = "0.2.1"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    look_inside_derive = "0.1.0"
    syn                = "2.0.46"
